# FastAPI_backend

./: README.md
Projects/DAy_8_path_cookies/: cookies.py  path_parameter.py  query_parameter.py  request_body.py
Projects/Day_10_Multi_tenant_api/: notes.md
Projects/Day_11_search_query/: My_notes.txt
Projects/Day_13_Payment_integration/: notes.md
Projects/Day_14_Payment_integration_2/: notes.md
Projects/Day_22_webRTC/: alembic.ini  pyproject.toml  requirements.txt
Projects/Day_22_webRTC/project2/: alembic.ini  main.py
Projects/Day_22_webRTC/project2/config/: settings.py
Projects/Day_22_webRTC/project2/database/: connection.py
Projects/Day_22_webRTC/project2/handlers/: auth_handler.py  call_handler.py  chat_handler.py
Projects/Day_22_webRTC/project2/migration/: env.py
Projects/Day_22_webRTC/project2/migration/versions/: 041152be222e_add_chat_table.py  0babf91b7a74_add_call_logs_table.py
Projects/Day_22_webRTC/project2/models/: call_log.py  chat_msg.py  user.py
Projects/Day_22_webRTC/project2/routers/: auth.py  chat.py
Projects/Day_22_webRTC/project2/schemas/: auth_schema.py  chat_schema.py
Projects/Day_22_webRTC/project2/static/css/: auth.css  chat.css  style.css
Projects/Day_22_webRTC/project2/static/js/: chat.js  login.js  register.js
Projects/Day_22_webRTC/project2/templates/: chat.html  login.html  register.html
Projects/Day_22_webRTC/project2/utils/: security.py  websocket_manager.py
doc_training/: Day 3 & Day 4.docx  Day-1 & Day-2.docx  Day1 and Day2 work.docx  Postman & PostgreSQL.docx  Role Based Auth.docx  day3.odt  day4.odt
(+216 files in other folders)
