[project]
name = "chat-app"
version = "0.1.0"
description = "Real-time chat with multi-tenant support"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "psycopg2-binary>=2.9.9",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.3",
    "python-dotenv>=1.0.0",
    "redis>=5.0.1",
    "alembic>=1.13.1",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.3.0",
    "pwdlib[argon2]>=0.3.0",
    "aiofiles==23.2.1",
]
